// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fade should match snapshot 1`] = `
<div>
  <span
    style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
  >
    Fade Text
  </span>
</div>
`;

exports[`Fade should match snapshot 2`] = `
<div>
  <span
    style="opacity: 0; visibility: hidden;"
  >
    Fade Text
  </span>
</div>
`;
